# shuttle-axum-rest-api

./: Cargo.toml  README.md  migrations.sql
src/: main.rs
