[package]
name = "shuttle-axum-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shuttle-axum = "0.52.0"
shuttle-runtime = "0.52.0"
shuttle-shared-db = { version = "0.52.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.28.2"
